--- a/polls/templates/polls/results.html
+++ b/polls/templates/polls/results.html
@@ -4,4 +4,4 @@
     <li>{{ choice.choice_text }} -- {{ choice.votes }} vote{{ choice.votes|pluralize }}</li>
 {% endfor %}
 </ul>
-<a href="{% url 'detail' question.id %}">Vote again?</a>
+<a href="{% url 'polls:detail' question.id %}">Vote again?</a>
