insert code of line 1 and 2 in mysite_project/polls/templates/polls/index.html

--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,4 +1,5 @@
-
+{% load static %}
+<link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}" />
 {% if latest_question_list %}
     <ul>
     {% for question in latest_question_list %}
